--- a/_config.yml
+++ b/_config.yml
@@ -30,11 +30,11 @@ force-https: True
 # HTML Head #
 #############
 
-lang: "en"
-author: "John Smith"
-title: "{ John Smith }"
-description: "Blog and website of John Smith, blogging mainly for tech. Opinions expressed are mine."
-keywords: "smith, jones, personal, jekyll, theme"
+lang: "kr"
+author: "phpbae"
+title: "phpbae's github blog"
+description: "phpbae's github blog"
+keywords: "smith, jones, personal, jekyll, theme, github, phpbae, blog"
 favicon: "/img/favicon.ico"
 
 ################
