--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,11 @@
 
+remote_theme : le4ker/personal-jekyll-theme
+
 # Site settings
 
 # NB! Set your site's url, otherwise stuff will break :)
 
-url: "https://le4ker.github.io"
+url: "https://phpbae.github.io/"
 
 # If you're hosting your site at a Project repository on GitHub pages
 # (https://yourusername.github.io/repository-name)
@@ -12,7 +14,7 @@ url: "https://le4ker.github.io"
 #
 # NB! Without this *nothing* will work, because it's used in every path :)
 
-baseurl: /personal-jekyll-theme
+baseurl:
 
 # Google tracking id
 
@@ -29,10 +31,10 @@ force-https: True
 #############
 
 lang: "en"
-author: "John Smith"
-title: "{ John Smith }"
+author: "phpbae"
+title: "phpbae's github blog"
 description: "Blog and website of John Smith, blogging mainly for tech. Opinions expressed are mine."
-keywords: "smith, jones, personal, jekyll, theme"
+keywords: "phpbae, personal, jekyll, theme, github, "
 favicon: "/img/favicon.ico"
 
 ################
