--- a/_config.yml
+++ b/_config.yml
@@ -102,24 +102,24 @@ analytics:
 author:
   name             : "phpbae"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "Hi. This blog is IT blog. I'm a web developer in korea. Thanks."
+  bio              : "Hi. This blog is IT blog. I'm a web developer in korea. Thanks. slideshare: https://www.slideshare.net/phpbae"
   location         : "Korea(Republic of Korea)"
   email            : "rebch86@daum.net"
   uri              :
   home             : # null (default), "absolute or relative url to link to author home"
-  bitbucket        : "https://bitbucket.org/phpbae/"
+  bitbucket        : "phpbae/"
   codepen          :
   dribbble         :
   flickr           :
   facebook         :
   foursquare       :
-  github           : "https://github.com/phpbae"
+  github           : "phpbae"
   gitlab           :
   google_plus      :
   keybase          :
   instagram        :
   lastfm           :
-  linkedin         : # "john-doe-12345678" (the last part of your profile url, e.g. https://www.linkedin.com/in/john-doe-12345678)
+  linkedin         : "php-bae-213bb2152" # "john-doe-12345678" (the last part of your profile url, e.g. https://www.linkedin.com/in/john-doe-12345678)
   pinterest        :
   soundcloud       :
   stackoverflow    : # "123456/username" (the last part of your profile url, e.g. https://stackoverflow.com/users/123456/username)
@@ -130,7 +130,6 @@ author:
   weibo            :
   xing             :
   youtube          : # "https://youtube.com/c/MichaelRoseDesign"
-  slideshare       : "https://www.slideshare.net/phpbae"
 
 
 # Reading Files
