--- a/_config.yml
+++ b/_config.yml
@@ -101,7 +101,7 @@ analytics:
 # Site Author
 author:
   name             : "phpbae"
-  avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
+  avatar           : "/assets/images/bio-photo.jpg" # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
   bio              : "Hi. This blog is IT blog. I'm a web developer in korea. Thanks. slideshare: https://www.slideshare.net/phpbae"
   location         : "Korea(Republic of Korea)"
   email            : "rebch86@daum.net"
