--- a/_config.yml
+++ b/_config.yml
@@ -102,7 +102,7 @@ analytics:
 author:
   name             : "phpbae"
   avatar           : "/assets/images/bio-photo.jpg" # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "Hi. This blog is IT blog. I'm a web developer in korea. Thanks. slideshare: https://www.slideshare.net/phpbae"
+  bio              : "ttt Hi. This blog is IT blog. I'm a web developer in korea. Thanks. slideshare: https://www.slideshare.net/phpbae"
   location         : "Korea(Republic of Korea)"
   email            : "rebch86@daum.net"
   uri              :
@@ -135,7 +135,7 @@ author:
 # Reading Files
 include:
   - .htaccess
-  - _pages
+  - ["_pages"]
 exclude:
   - "*.sublime-project"
   - "*.sublime-workspace"
