--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,11 +1,11 @@
 # main links
 main:
   - title: "글 목록"
-    url: /categories/list
+    url: categories/list
   - title: "About"
-    url: /about/
+    url: about/
   - title: "Home"
-    url: /
+    url: 
   # - title: "Sample Posts"
   #   url: /year-archive/
   # - title: "Sample Collections"
