--- a/_config.yml
+++ b/_config.yml
@@ -46,7 +46,7 @@ staticman:
   path                   : # "/_data/comments/{options.slug}" (default)
   requiredFields         : # ['name', 'email', 'message']
   transforms:
-    email                : "md5" # "md5"
+    email                : # "md5"
   generatedFields:
     date:
       type               : # "date"
