--- a/_config.yml
+++ b/_config.yml
@@ -35,7 +35,7 @@ comments:
   facebook: # https://developers.facebook.com/docs/plugins/comments
     appid                : 250064018932885
     num_posts            : 3  # 5 (default)
-    colorscheme          : "dark"  # "light" (default), "dark"
+    colorscheme          : # "light" (default), "dark"
 staticman:
   allowedFields          : # ['name', 'email', 'url', 'message']
   branch                 : # "master"
