--- a/_config.yml
+++ b/_config.yml
@@ -208,6 +208,9 @@ plugins:
   - jekyll-gist
   - jekyll-feed
   - jemoji
+  - jekyll-include-cache
+  
+  
 
 # mimic GitHub Pages with --safe
 whitelist:
